Deployments/unode-deployments/unode-admin-api/unode-dev-admin-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unode-dev-admin-api
  namespace: default
  labels:
    app: unode-dev-admin-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unode-dev-admin-api
  template:
    metadata:
      labels:
        app: unode-dev-admin-api
    spec:
      containers:
        - name: unode-dev-admin
          image: mohitini8/unode-dev-admin:0.2.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              protocol: TCP
